--- a/SWAT/Web.config
+++ b/SWAT/Web.config
@@ -23,7 +23,8 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="SWATEntities" connectionString="metadata=res://*/Models.SWATModel.csdl|res://*/Models.SWATModel.ssdl|res://*/Models.SWATModel.msl;provider=iAnywhere.Data.SQLAnywhere;provider connection string=&quot;userid=dba;password=sql;databasename=hydrosanitassup;servername=inwehxbeta;host=localhost&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SWATEntities" connectionString="metadata=res://*/Models.SWATModel.csdl|res://*/Models.SWATModel.ssdl|res://*/Models.SWATModel.msl;provider=iAnywhere.Data.SQLAnywhere;provider connection string=&quot;userid=dba;password=sql;databasename=hydrosanitassup;servername=inwehxbeta;host=localhost&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SWATEntities" connectionString="metadata=res://*/Models.SWATModel.csdl|res://*/Models.SWATModel.ssdl|res://*/Models.SWATModel.msl;provider=iAnywhere.Data.SQLAnywhere;provider connection string=&quot;userid=dba;password=sql;databasename=swat;servername=inwehxbeta;host=delta.csg.uwaterloo.ca&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -31,12 +32,16 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
