--- a/SWAT/packages.config
+++ b/SWAT/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspNetWebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="DotNet.Highcharts" version="2.0" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="2.1.0" targetFramework="net40" />
